Various Show Screenshot Preview fixes
- Fixed an issue where displaying screenshot previews in notifications caused cutoff/sizing issues in the Customiser preview
- Changed main window's `minWidth`/`minHeight` values to accommodate for larger notification dimensions when Show Screenshot Preview option is active, in order to prevent layout issues when resizing the window
- Fixed an issue where an opacity value was not set for `#ssdisplay` element when setting Customiser > Style > "Opacity" option
- Fixed an issue where `--notifyheight` CSS value was incorrect in screenshots when Show Screenshot Preview option was enabled while Screenshot with Notification Overlay was disabled
- TODO: Fix issue where "fast" animations are not set correctly for certain presets when Show Screenshot Preview option is enabled
- Fixed an issue where the on-screen placement of the "PS Classic" preset was incorrect, due to the `offset` value of 0 not being used in `top`/`bottom` variable calculations in `listeners.ts` > `setnotifybounds()` function
- Fixed an issue where the "PS Classic" preset was incorrectly placed in the Customiser preview due to an offset value of 0, causing the notification to be cut off when enabling the Show Screenshot Preview option
- Fixed an issue where the `gap` value for the "Xbox Classic" preset was incorrect, due to the updated `line-height` value
- Removed `deeppink` background color from `base.html` which was previously used for testing
- Updated `elemselector.ts`/`base.ts` to only display the Show Screenshot Preview option when Settings > Media > Additional Media > Screenshot with Notification Overlay is selected

--- a/notify/base.css
+++ b/notify/base.css
@@ -310,6 +310,7 @@ body[nodecoration] .wrapper#achcontent > span {
     width: var(--notifywidth);
     height: calc(var(--notifyheight) * 3.5);
     background-color: transparent;
+    opacity: var(--opacity);
     overflow: hidden;
 }
 
