--- a/notify/presets/xbox360/styles.css
+++ b/notify/presets/xbox360/styles.css
@@ -136,9 +136,7 @@
 .wrapper#achcontent {
     grid-template-columns: calc(var(--notifyheight) + (5px * var(--scale))) 1fr 0fr;
     grid-column: 1 / -1;
-    /* gap: 0; */
-    column-gap: 0;
-    row-gap: 0.35rem;
+    gap: 0;
     line-height: 1.25;
 }
 
